<resources>
    <string name="EEEEddmmyy">EEEE dd/MM/yyyy</string>
    <string name="EEEEmmddyy">EEEE MM/dd/yyyy</string>
    <string name="EEEEyymmdd">EEEE yyyy/MM/dd</string>
    <string name="Eddmmyy">E, dd/MM/yyyy</string>
    <string name="Work">Work</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="about_calendar">About Calendar</string>
    <string name="accessibility_checkbox">Tickbox</string>
    <string name="accessibility_completed_task">Completed task</string>
    <string name="accessibility_description_alternative_bubble_closed">Pop-up closed.</string>
    <string name="accessibility_description_alternative_bubble_displayed">Pop-up displayed</string>
    <string name="accessibility_drop_down_list">%s, drop down list</string>
    <string name="accessibility_heading">Heading</string>
    <string name="accessibility_month_view">Month view</string>
    <string name="accessibility_next_month_button">Next month</string>
    <string name="accessibility_pen_mode_button">Write</string>
    <string name="accessibility_previous_month_button">Previous month</string>
    <string name="accessibility_schedule_view">Schedule view</string>
    <string name="accessibility_uncompleted_task">Uncompleted task</string>
    <string name="account_not_responding">Account not responding. Try again later.</string>
    <string name="action_add_to_contacts">Add to Contacts</string>
    <string name="action_call">Call</string>
    <string name="action_email">Send email</string>
    <string name="action_message">Send message</string>
    <string name="action_navigate">Directions</string>
    <string name="action_view_contact_info">View contact info</string>
    <string name="add_account">Add account</string>
    <string name="add_due_date">Add due date</string>
    <string name="add_event">Add detailed event</string>
    <string name="add_event_description">Add event</string>
    <string name="add_event_tooltip">Add detailed event</string>
    <string name="add_files">add files</string>
    <string name="add_files_chooser_title">Complete action using</string>
    <string name="add_item">Add</string>
    <string name="add_on">Add on %s</string>
    <string name="add_reminder_on">Add reminder on %s</string>
    <string name="add_reminder_tooltip">Add detailed reminder</string>
    <string name="add_task">Add task</string>
    <string name="adding_lunar_events">Adding lunar events</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_from_to_tts">From %1$s to %2$s</string>
    <string name="agenda_view">Schedule</string>
    <string name="agenda_view_description">Agenda view</string>
    <string name="agree">Agree</string>
    <string name="airbrush_selected">M5.025,46.18C7.135,48.03 9.895,49.16 12.925,49.16C13.555,49.16 14.175,49.11 14.775,49.01C17.075,48.66 19.145,47.65 20.815,46.18C21.025,46 21.225,45.81 21.415,45.61C21.415,45.61 21.415,84 21.415,84C21.415,84 4.415,84 4.415,84C4.415,84 4.415,45.6 4.415,45.6C4.615,45.8 4.815,45.99 5.025,46.18z</string>
    <string name="airbrush_unselected">M5.025,46.18C7.135,48.03 9.895,49.16 12.925,49.16C13.555,49.16 14.175,49.11 14.775,49.01C17.075,48.66 19.145,47.65 20.815,46.18C21.015,46 21.215,45.82 21.405,45.62C21.405,45.62 21.405,52.95 21.405,52.95C21.405,52.95 4.415,52.95 4.415,52.95C4.415,52.95 4.415,45.6 4.415,45.6C4.615,45.8 4.815,45.99 5.025,46.18z</string>
    <string name="airplane">Airplane</string>
    <string name="alarm_invalid_days">Invalid value entered.</string>
    <string name="alert">Alert</string>
    <string name="alert_add_custom_description">To receive email alerts from Google Calendar, add a custom alert.</string>
    <string name="alert_connect_to_first_phone_number">Multiple phone numbers saved for event. First phone number will be called.</string>
    <string name="alert_content_hidden">Upcoming event</string>
    <string name="alert_dual_dar_unlock_workspace_to_see_event">Unlock Work profile to see event</string>
    <string name="alert_dual_dar_unlock_your_phone_to_see_event">Unlock your phone to see event</string>
    <string name="alert_dual_dar_unlock_your_tablet_to_see_event">Unlock your tablet to see event</string>
    <string name="alert_popup_attendees">%1$s and %2$d more</string>
    <string name="alert_snoozed">%s (snoozed)</string>
    <string name="alerts_background_label">Alert background</string>
    <string name="all_day">All day</string>
    <string name="all_events_in_series">All events in series</string>
    <string name="all_instances">All instances</string>
    <string name="all_reminders">All reminders</string>
    <string name="allow">Allow</string>
    <string name="allow_app_access_to_item_wlan">Your WLAN MAC address</string>
    <string name="allow_app_access_to_item_your_audio_video_image">Your audio, video, and image files</string>
    <string name="allow_app_access_to_item_your_location">Your location</string>
    <string name="allow_app_permission_message_body_string_contact">Contacts</string>
    <string name="allow_app_permission_message_string_contact">Your contacts</string>
    <string name="allow_app_permission_message_string_read_contact">Read contacts</string>
    <string name="allow_calendar_access_the_data">Allow %s to access the following data:</string>
    <string name="allow_calendar_agree_to_all_of_the_above">After you agree to all of the above, this message will not be shown again.</string>
    <string name="allow_transfer_data">Data will be transferred in the background when your phone is connected to a mobile network or WLAN.</string>
    <string name="already_updated">Already updated.</string>
    <string name="alternate_calendar_label_chinese">Chinese lunar</string>
    <string name="china_holiday_update_settings">Update holiday calendar</string>
    <string name="china_holiday_update_settings_summary">Download the latest holiday calendar.</string>
    <string name="cross_profile_calendar_menu">Connect personal and work calendars</string>
    <string name="default_calendar">Default calendar</string>
    <string name="delete">Delete</string>
    <string name="discard_label">@string/cancel</string>
    <string name="edit">Edit</string>
    <string name="event_info_menu_duplicate">Duplicate</string>
    <string name="fr_short_widget">@string/fr_short</string>
    <string name="last_modified">Last modified</string>
    <string name="m_friday_widget">@string/m_friday</string>
    <string name="m_monday_widget">@string/m_monday</string>
    <string name="m_saturday_widget">@string/m_saturday</string>
    <string name="m_sunday_widget">@string/m_sunday</string>
    <string name="m_thursday_widget">@string/m_thursday</string>
    <string name="m_tuesday_widget">@string/m_tuesday</string>
    <string name="m_wednesday_widget">@string/m_wednesday</string>
    <string name="manage_calendars">Manage calendars</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_trash_description">Keep deleted events for 30 days.</string>
    <string name="mo_short_widget">@string/mo_short</string>
    <string name="number_1">1</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_12">12</string>
    <string name="number_13">13</string>
    <string name="number_14">14</string>
    <string name="number_15">15</string>
    <string name="number_16">16</string>
    <string name="number_17">17</string>
    <string name="number_18">18</string>
    <string name="number_19">19</string>
    <string name="number_20">20</string>
    <string name="number_21">21</string>
    <string name="number_22">22</string>
    <string name="number_23">23</string>
    <string name="number_24">24</string>
    <string name="number_25">25</string>
    <string name="number_26">26</string>
    <string name="number_27">27</string>
    <string name="number_28">28</string>
    <string name="number_29">29</string>
    <string name="number_30">30</string>
    <string name="number_31">31</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="preferences_alerts_background_description">Choose an image or color for the background of your alerts.</string>
    <string name="preferences_alerts_on_smart_devices">Alerts on smart devices</string>
    <string name="preferences_alternate_calendar">Alternate calendar</string>
    <string name="preferences_category_alerts">Alerts</string>
    <string name="preferences_category_more">More settings</string>
    <string name="preferences_category_optional">Optional information</string>
    <string name="preferences_default_reminder_title">Default alert times</string>
    <string name="preferences_description_remove_times_from_event_titles">Automatically remove times and dates used for quick scheduling from event titles.</string>
    <string name="preferences_dismiss_alerts_from_all_devices">Dismiss alerts from all devices</string>
    <string name="preferences_dismiss_alerts_from_all_devices_description">"If you dismiss an alert on one device, it'll also be dismissed on all other devices that have this setting turned on."</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_hide_past_events">Hide past events</string>
    <string name="preferences_hide_past_events_description">Only show events from the current day and any others that are upcoming.</string>
    <string name="preferences_islarmic_adjustment">Hijri dates adjustment</string>
    <string name="preferences_labs">Labs</string>
    <string name="preferences_lock_timezone_descrip">Lock the time and date of events to your selected time zone.</string>
    <string name="preferences_lock_timezone_title">Lock time zone</string>
    <string name="preferences_notification_type">Alert type</string>
    <string name="preferences_notification_type_medium">Medium</string>
    <string name="preferences_show_completed_reminders_title">Show completed reminders</string>
    <string name="preferences_show_week_num_title">Show week numbers</string>
    <string name="preferences_title_remove_times_from_event_titles">Remove times from titles</string>
    <string name="preferences_today_timezone_title">View today according to</string>
    <string name="preferences_weather">Show weather forecast</string>
    <string name="preferences_week_start_day_title">First day of the week</string>
    <string name="provide_location_information_preference">Provide location information</string>
    <string name="restore">Restore</string>
    <string name="sa_short_widget">@string/sa_short</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="su_short_widget">@string/su_short</string>
    <string name="th_short_widget">@string/th_short</string>
    <string name="timezone_label">Time zone</string>
    <string name="tu_short_widget">@string/tu_short</string>
    <string name="we_short_widget">@string/we_short</string>
    <string name="widget_add_countdown_widget_label">Add Countdown widget</string>
</resources>