<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/widget_today_preview_sunday_color" android:text="@string/number_5" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_6" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_7" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_8" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_9" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_10" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_11" style="@style/WidgetTodayPreviewDateText" />
</LinearLayout>
