<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/widget_today_preview_sunday_color" android:text="@string/number_12" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_13" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_14" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_15" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_16" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_17" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_18" style="@style/WidgetTodayPreviewDateText" />
</LinearLayout>
