<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/widget_today_preview_sunday_color" android:text="@string/su_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/mo_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/tu_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/we_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/th_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/fr_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
    <TextView android:textColor="@color/widget_today_preview_saturday_color" android:text="@string/sa_short_widget" style="@style/WidgetTodayPreviewDayOfWeekText" />
</LinearLayout>
