<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/widget_month_preview_week_height_medium">
        <TextView android:textColor="@color/widget_month_sunday_number_text_color" android:text="@string/number_5" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_6" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_7" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_8" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_9" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_10" style="@style/WidgetPreviewDateText" />
        <TextView android:textColor="@color/widget_month_preview_normal_day_color" android:text="@string/number_11" style="@style/WidgetPreviewDateText" />
    </LinearLayout>
</LinearLayout>
