<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/widget_today_preview_sunday_color" android:text="@string/number_19" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_20" style="@style/WidgetTodayPreviewDateText" />
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:layout_gravity="center" android:layout_width="@dimen/today_widget_large_preview_today_mark_size_width" android:layout_height="@dimen/today_widget_large_preview_today_mark_size_height" android:src="@drawable/widget_today_preview_today_mark" android:tint="@color/widget_today_preview_today_mark_color" />
        <TextView android:textSize="@dimen/today_widget_large_preview_date_text_size" android:textColor="@color/widget_today_preview_today_date_color" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/number_21" style="@style/RobotoMediumFontStyle" />
    </FrameLayout>
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_22" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_23" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_24" style="@style/WidgetTodayPreviewDateText" />
    <TextView android:textColor="@color/widget_today_preview_normal_day_color" android:text="@string/number_25" style="@style/WidgetTodayPreviewDateText" />
</LinearLayout>
